external-crates/move/crates/move-compiler/tests/move_2024/migration/all_migrations.exp
error[E01003]: invalid modifier
  ┌─ tests/move_2024/migration/all_migrations.move:6:5
  │
6 │     struct S { f: u64 }
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01003]: invalid modifier
  ┌─ tests/move_2024/migration/all_migrations.move:8:5
  │
8 │     struct LongerName {
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01003]: invalid modifier
   ┌─ tests/move_2024/migration/all_migrations.move:13:5
   │
13 │     struct Positional(u64, u64, u64)
   │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
   │
   = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

warning[W09003]: unused assignment
   ┌─ tests/move_2024/migration/all_migrations.move:16:20
   │
16 │         let S { f: fin } = s;
   │                    ^^^ Unused assignment for variable 'fin'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_fin')
   │
   = This warning can be suppressed with '#[allow(unused_assignment)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04024]: invalid usage of immutable variable
   ┌─ tests/move_2024/migration/all_migrations.move:17:9
   │
16 │         let S { f: fin } = s;
   │                    --- To use the variable mutably, it must be declared 'mut', e.g. 'mut fin'
17 │         fin = 10;
   │         ^^^ Invalid assignment of immutable variable 'fin'

error[E04024]: invalid usage of immutable variable
   ┌─ tests/move_2024/migration/all_migrations.move:18:9
   │
15 │     fun t0(x: u64, s: S): u64 {
   │            - To use the variable mutably, it must be declared 'mut', e.g. 'mut x'
   ·
18 │         x = 20;
   │         ^ Invalid assignment of immutable variable 'x'

error[E13002]: feature is deprecated in specified edition
   ┌─ tests/move_2024/migration/all_migrations.move:22:5
   │
22 │     public(friend) fun t1() {}
   │     ^^^^^^^^^^^^^^ 'public(friend)' is deprecated. Replace with 'public(package)'

